shutdown & input is ok.